issue105 LRAid should be URI instead of URL
issue #105

Signed-off-by: xstefank <xstefank122@gmail.com>